updated test branch to model_features

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [ model_features ]
   pull_request:
-    branches: [ main ]
+    branches: [ model_features ]
 
 jobs:
   test:
