swithched testing back to main

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: CI/CD
 
 on:
   push:
-    branches: [ e2e_features ]
+    branches: [ main ]
   pull_request:
-    branches: [ e2e_features ]
+    branches: [ main ]
 
 jobs:
   test:
